<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eb6834"
    tools:context=".formActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:background="#FFFFFF">

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/distance" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_image">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <EditText
            android:layout_below="@+id/user_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            android:singleLine="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/et1"
            android:textColor="#000000"
            android:textStyle="normal"
            android:textSize="20dp"/>

        <EditText
            android:layout_below="@+id/et1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:inputType="number"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/e1"
            android:textColor="#000000"
            android:textStyle="normal"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/e1"
            android:layout_marginTop="15dp"
            android:singleLine="true"
            android:layout_marginStart="20dp"
            android:text="@string/test"
            android:textSize="20dp"
            android:textStyle="bold"
            android:id="@+id/tv1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit1"
            android:textSize="15dp"
            android:textStyle="normal"
            android:layout_marginTop="15dp"
            android:singleLine="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@+id/tv1"
            android:hint="@string/yn"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit1"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:text="@string/yes_then"
            android:textSize="20dp"
            android:singleLine="true"
            android:textStyle="bold"
            android:id="@+id/tv2"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit2"
            android:textSize="15dp"
            android:textStyle="normal"
            android:layout_marginTop="15dp"
            android:singleLine="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@+id/tv2"
            android:hint="@string/positive"/>



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et2"
            android:singleLine="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/edit2"
            android:hint="@string/other"
            android:textColorHint="@color/colorAccent"/>

        <Button
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/submit"
            android:textSize="18dp"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/round_corners5"
            android:layout_below="@id/et2"
            android:layout_marginTop="15dp"
            />
        <Button
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/language"
            android:textSize="18dp"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/round_corners5"
            android:layout_below="@id/btn2"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />
        </LinearLayout>
    </ScrollView>
    </RelativeLayout>

</RelativeLayout>